**  denotes quite substantial/important changes
*** denotes really big changes 

1.8-4

* predict.bam now exported in response to a request from another 
  package maintainer.

* 1.8 allows some prediction tasks for some families (e.g. cox.ph) to 
  require response variables to be supplied. NAs in these then messed up 
  prediction when they were not needed (e.g. if response variables with
  NAs were provided to predict.gam for a simple exponential family GAM). 
  Response NAs now passed to the family specific prediction code, restoring 
  the previous behaviour for most models. Thanks Casper Wilestofte Berg.

* backend parallel QR code used by gam modified to use a pivoted block
  algorithm.

* nthreads argument added to 'bam' to allow for parallel computation 
  for computations in the main process (serial on any cluster nodes).
  e.g. QR based combination of results from cluster nodes is now
  parallel.

* fREML computation now partly in parallel (controlled by 'nthreads' 
  argument to 'bam')

* slanczos now accepts an nt argument allowing parallel computation of 
  main O(n^2) step.

* fix to newton logic problem, which could cause an attempt to use 'score2'
  before definition.

* fix to fREML code which could cause matrix square root to lose dimensions 
  and cause an error. 

* initial.sp could perform very poorly for very low basis dimensions - could 
  set initial sp to infinity effectively. 

1.8-3

* Fix of two illegal read/write bugs with extended family models with no
  smooths. (Thanks to Julian Faraway for reporting beta regr problem).

* bam now checks that chunk.size > number of parameters and resets the 
  chunk.size if not.

* Examples of use of smoothCon and PredictMat for setting up bases 
  for use outside mgcv (and then predicting) added to ?smoothCon.

1.8-2

* For exponential family gams, fitted by outer iteration, a warning is now
  generated if the Pearson scale parameter estimate is more than 4 times